# PR2_EtherCAT_no_ROS

./: .gitignore  CMakeLists.txt  dubins_path.py  dubins_path_time.py  export_motion_mat.py  motion_gen.py
driver/: CMakeLists.txt  master_driver.cpp  master_driver.h  wg05.cpp  wg05.h
ethercat_hardware/: CMakeLists.txt  ethercat_device.h  wg_eeprom.h  wg_mailbox.h
ethercat_hardware/src/: ethercat_com.cpp
test/: CMakeLists.txt  main.cpp
